--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <p class="e-mail ">e-mail</p>
                             <input class="mail inner mt-6 pl-24" type="email" placeholder="Your email">
                             <p class="message pt-37">message</p>
-                            <textarea class="text mt-6 pl-24 inner pb-121" name="drop us line" id="" cols="30"
+                            <textarea class="text mt-6 pl-24 inner pt-13" placeholder="drop us line" name="message" id="#" cols="30"
                                 rows="10"></textarea>
 
                             <p class="last pt-35">name</p>
